--- a/Server/iis.config
+++ b/Server/iis.config
@@ -156,7 +156,7 @@
         <sites>
             <site name="AppUpdates" id="1" serverAutoStart="true">
                 <application path="/">
-                    <virtualDirectory path="/" physicalPath="D:\Projects\Kluwer\_local\AppServer\Server\" />
+                    <virtualDirectory path="/" physicalPath="D:\Projects\AppServer\Server\" />
                 </application>
                 <bindings>
                     <binding protocol="https" bindingInformation=":44300:localhost" />
