--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -56,12 +56,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contract\IBootstrapper.cs" />
+    <Compile Include="Hosting\AppDomainApplicationHost.cs" />
+    <Compile Include="Hosting\AppDomainHostingModel.cs" />
+    <Compile Include="Hosting\HostingModel.cs" />
+    <Compile Include="Hosting\ProcessApplicationHost.cs" />
+    <Compile Include="Hosting\ProcessHostingModel.cs" />
     <Compile Include="Infrastructure\ReflectionHelper.cs" />
     <Compile Include="Persistence\FileSystemApplication.cs" />
     <Compile Include="Persistence\FileSystemPackage.cs" />
     <Compile Include="Persistence\FileSystemRepositoryConfiguration.cs" />
     <Compile Include="Persistence\IApplicationRepository.cs" />
     <Compile Include="Persistence\FileSystemRepository.cs" />
+    <Compile Include="Hosting\ApplicationHost.cs" />
     <Compile Include="Server\AppServerException.cs" />
     <Compile Include="Persistence\IApplicationRepositoryConfiguration.cs" />
     <Compile Include="Server\ArchivePackage.cs" />
