--- a/Host/App.config.template
+++ b/Host/App.config.template
@@ -3,4 +3,21 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+	<!--<system.runtime.remoting>
+		<application>
+			<channels>
+				<channel ref="tcp" useDefaultCredentials="true">
+					<serverProviders>
+						<formatter ref="binary" typeFilterLevel="Full"/>
+					</serverProviders>
+				</channel>
+			</channels>
+			<service>
+				<wellknown
+				  mode="SingleCall"
+				  type="Host.RemotingEndpoint, apphost"
+				  objectUri="managementservice.rem" />
+			</service>
+		</application>
+	</system.runtime.remoting>-->
 </configuration>
