Fixed ProcessHosting and Context

--- a/Alure/Alure.csproj
+++ b/Alure/Alure.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlureCallback.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="FileTransformer.cs" />
     <Compile Include="ConfigUpdate.cs" />
