--- a/Host/Core.ProcessHost.csproj
+++ b/Host/Core.ProcessHost.csproj
@@ -7,12 +7,14 @@
     <ProjectGuid>{745CF4F9-50CC-4EB1-8F42-D86BC74E3E62}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Host</RootNamespace>
+    <RootNamespace>Core.ProcessHost</RootNamespace>
     <AssemblyName>apphost</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile />
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -46,6 +48,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Logger.cs" />
+    <Compile Include="ProcessApplicationHost.cs" />
+    <Compile Include="ProcessHostingModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
@@ -54,10 +58,22 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="App.config.template" />
+    <Content Include="FodyWeavers.xml" />
     <Content Include="Install\pi.exe" />
     <Content Include="Install\LOC\Application.ini" />
     <Content Include="Install\LOC\Environment.ini" />
     <Content Include="Install\LOC\Settings.ini" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj">
+      <Project>{6aeedab9-0b11-4189-804c-fc19cebd187d}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Utiltities\Utilities.csproj">
+      <Project>{f3576572-2e76-45c5-a73c-ac10519bf07f}</Project>
+      <Name>Utilities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
@@ -68,6 +84,13 @@
     <PostBuildEvent>"$(ProjectDir)Install\pi.exe" parameterfile="$(ProjectDir)Install\LOC\Settings.ini" template="$(ProjectDir)log4net.config.template" output="$(TargetDir)log4net.config" type=xml
 "$(ProjectDir)Install\pi.exe" parameterfile="$(ProjectDir)Install\LOC\Settings.ini" template="$(ProjectDir)app.config.template" output="$(TargetPath).config" type=xml</PostBuildEvent>
   </PropertyGroup>
+  <Import Project="..\packages\Fody.1.29.4\build\portable-net+sl+win+wpa+wp\Fody.targets" Condition="Exists('..\packages\Fody.1.29.4\build\portable-net+sl+win+wpa+wp\Fody.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\Fody.1.29.4\build\portable-net+sl+win+wpa+wp\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Fody.1.29.4\build\portable-net+sl+win+wpa+wp\Fody.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
