--- a/Utiltities/Utilities.csproj
+++ b/Utiltities/Utilities.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Dependency.cs" />
     <Compile Include="ElementCollection.cs" />
     <Compile Include="IDateTimeFactory.cs" />
+    <Compile Include="IPHelper.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="MVC\TraceAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
