Fixed "port is already in use" issue / Removed state argument from Initialization

--- a/Host/Core.ProcessHost.csproj
+++ b/Host/Core.ProcessHost.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Logger.cs" />
+    <Compile Include="PortManager.cs" />
     <Compile Include="ProcessApplicationHost.cs" />
     <Compile Include="ProcessHostingModel.cs" />
     <Compile Include="Program.cs" />
